// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adjustSelectionOffsetsAndCleanup delete - will merge if neighboring selections have the same formats 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a paragraph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": Immutable.Record {
            "next": undefined,
            "length": -1,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 9,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": true,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete - will merge with last selection if same formats 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": undefined,
        "length": -1,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete all characters 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": undefined,
      "length": -1,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": false,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete all highlighted characters from caret through the end (when "start" with multiple nodes in handleBackspace) 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a second para",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": undefined,
              "length": -1,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": true,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 1,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 6,
          "selection-bold": false,
          "selection-italic": true,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete all highlighted characters up to caret (up to edge of a selection) 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "paragraph for good measure?",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": undefined,
          "length": -1,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 9,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": true,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 9,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": false,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete all highlighted characters up to caret (when "end" in handleBackspace) 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "graph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": undefined,
        "length": -1,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 5,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": true,
      "selection-siteinfo": false,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete highlighted characters from middle of one selection 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a sed paragraph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": undefined,
                "length": -1,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 9,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": true,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 1,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 3,
          "selection-bold": false,
          "selection-italic": true,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete highlighted characters from middle, deletes a selection, adjusts overlapping selections 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And graph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": Immutable.Record {
            "next": undefined,
            "length": -1,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 5,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": true,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 1,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete last character of last selection with formats, model should have 'selections' unset 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a second aragraph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": undefined,
      "length": -1,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": false,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete one character at the right boundary of two selections 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a secon paragraph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": undefined,
                "length": -1,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 9,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": true,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 1,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 5,
          "selection-bold": false,
          "selection-italic": true,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup delete one highlighted character at left boundary of two selections 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a econd paragraph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": undefined,
                "length": -1,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 9,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": true,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 1,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 5,
          "selection-bold": false,
          "selection-italic": true,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;

exports[`adjustSelectionOffsetsAndCleanup noop - default arguments 1`] = `
Immutable.Map {
  "type": "p",
  "parent_id": "39fb",
  "position": 1,
  "content": "And a second paragraph because",
  "id": "6eda",
  "post_id": 166,
  "meta": Immutable.Map {
    "selections": Immutable.Record {
      "next": Immutable.Record {
        "next": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": undefined,
                "length": -1,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 9,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": true,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 1,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 6,
          "selection-bold": false,
          "selection-italic": true,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
        "length": 3,
        "selection-bold": false,
        "selection-italic": false,
        "selection-code": false,
        "selection-siteinfo": false,
        "selection-mini": false,
        "selection-strikethrough": false,
        "selection-link": false,
        "linkUrl": "",
      },
      "length": 3,
      "selection-bold": false,
      "selection-italic": false,
      "selection-code": false,
      "selection-siteinfo": true,
      "selection-mini": false,
      "selection-strikethrough": false,
      "selection-link": false,
      "linkUrl": "",
    },
  },
}
`;
